--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 
     <script src="./src/scripts/github_data.js"></script>
+    <script src="./src/scripts/main.js"></script>
 </body>
 </html>
